--- a/src/main/webapp/css/home.css
+++ b/src/main/webapp/css/home.css
@@ -11,7 +11,7 @@
 }
 
 body.home {
-    background: url("architecture.jpg") no-repeat center center fixed;
+    background: url("./../pic/architecture.jpg") no-repeat center center fixed;
     background-size: cover;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -58,7 +58,7 @@ input.home {
 	width: 200px;
 	padding: 12px 24px;
 	border-radius: 12px;
-	margin: 16px;
+	margin: 32px;
 	text-align: center;
 	text-decoration: none;
 	display: inline-block;
