--- a/src/main/webapp/css/boomerang.css
+++ b/src/main/webapp/css/boomerang.css
@@ -88,10 +88,19 @@ div.contact {
   border: 1px dashed #666666;
 }
 
-.appWin {
+div.appWin {
 	position: absolute;
-    left: 32px;
-    top: 32px;
+    left: 108px;
+    top: 108px;
+	width: 400px;
+	height: 460px;
+	overflow: auto;
+}
+
+div.appMenu {
+  width: 100%;
+  height: 36px;
+  border: 2px solid #EE3366;
 }
 
 input[type=search].finder {
