--- a/src/main/webapp/css/home.css
+++ b/src/main/webapp/css/home.css
@@ -11,7 +11,7 @@
 }
 
 body.home {
-    background: url("./../pic/architecture.jpg") no-repeat center center fixed;
+    background: url("./../pic/taxi.jpg") no-repeat center center fixed;
     background-size: cover;
     -webkit-background-size: cover;
     -moz-background-size: cover;
